--- a/pagina 2/Compumax Gerardo.html
+++ b/pagina 2/Compumax Gerardo.html
@@ -7,23 +7,29 @@
 		<link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 		<link rel="stylesheet" href="https://i.icomoon.io/public/temp/082b809464/UntitledProject/style.css">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	</head>
 	<body>
-		<header>
-			<nav>
-				<ul class="menu">
-					<li><img class="imaghome" href="#" src="imagenes/iconos/home12.png"></li>
-					<li><a href="#">COMPUMAX</a></li>
-					<li><a href="#">Perifericos</a></li>
-					<li><a href="#">PC Completa</a></li>
-					<li><a href="#">Contactanos</a></li>
-				</ul>
-				<div class="search_bar">
-						<a href="#" class="icon-magnifying-glass"></a>
-						<input type="text" name="Buscar" id="bar">
-				</div>
-			</nav>
-		</header>
+		<header id="myHeader"></header>
+			<script>
+			var headerElement = document.getElementById('myHeader');
+
+			fetch('header.html')
+				.then(response => {
+				// Verificar si la solicitud fue exitosa
+				if (!response.ok) {
+					throw new Error('No se pudo cargar el archivo header.html');
+				}
+				return response.text();
+				})
+				.then(html => {
+				// Insertar el contenido obtenido dentro del elemento <header>
+				headerElement.innerHTML = html;
+				})
+				.catch(error => {
+				console.error('Error:', error);
+				});
+			</script>
 		<img src="imagenes/iconos/banner.png" class="banner1">
 		<br />
 
@@ -484,6 +490,6 @@
 			</div>
 		</header>
 
-
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 	</body>
 </html>
